@@ -1,3 +1,7 @@
+2004-09-14  Murray Cumming  <murrayc@murrayc.com>
+
+	* rnapplications.xml: Added evo stuff, based on email from JP Rosevear.
+
 2004-09-14  Davyd Madeley  <davyd@madeley.id.au>
 
 	* figures/figure-nautilus-context-menu.png: Epiphany is the default
